Mobile app work with cardio exercise

--- a/mobile/src/assets/i18n/fr.json
+++ b/mobile/src/assets/i18n/fr.json
@@ -41,6 +41,8 @@
   "NEXT_EXERCISE": "Exercice suivant",
   "EXERCISE_DONE": "Exercice terminée",
   "SERIE_DONE": "Série terminée",
+  "START_NEXT_TIME": "Session suivante",
+  "START_EXERCISE": "Démarrer l'exercise",
   "SESSION_TITLE": "Ma séance",
   "CLOSE_BUTTON": "Fermer",
   "CURRENT_SESSION": "Séance en cours"
